--- a/v1/conf/myconf.conf
+++ b/v1/conf/myconf.conf
@@ -3,3 +3,26 @@ port=8888
 english.txt=/home/zzl/searchEngine/v1/conf/english.txt
 stop_words_eng.txt=/home/zzl/searchEngine/v1/conf/stop_words_eng.txt
 stop_words_zh.txt=/home/zzl/searchEngine/v1/conf/stop_words_zh.txt
+C3-Art0002.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0002.txt
+C3-Art0003.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0003.txt
+C3-Art0005.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0005.txt
+C3-Art0007.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0007.txt
+C3-Art0009.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0009.txt
+C3-Art00011.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00011.txt
+C3-Art00013.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00013.txt
+C3-Art00015.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00015.txt
+C3-Art00017.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00017.txt
+C3-Art00019.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00019.txt
+C3-Art00021.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00021.txt
+C3-Art00023.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00023.txt
+C3-Art00025.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00025.txt
+C3-Art00027.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00027.txt
+C3-Art00029.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00029.txt
+C3-Art00031.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00031.txt
+C3-Art00033.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00033.txt
+C3-Art00035.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00035.txt
+C3-Art00037.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00037.txt
+C3-Art00039.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00039.txt
+C3-Art00041.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00041.txt
+C3-Art00043.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00041.txt
+C3-Art00045.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art00041.txt
