--- a/v1/conf/myconf.conf
+++ b/v1/conf/myconf.conf
@@ -26,3 +26,39 @@ C3-Art00039.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0039.txt
 C3-Art00041.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0041.txt
 C3-Art00043.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0043.txt
 C3-Art00045.txt=/home/zzl/searchEngine/v1/conf/art/C3-Art0045.txt
+auto.xml=/home/zzl/searchEngine/v1/conf/peopledaily/auto.xml
+book.xml=/home/zzl/searchEngine/v1/conf/peopledaily/book.xml
+ccnews.xml=/home/zzl/searchEngine/v1/conf/peopledaily/ccnews.xml
+coolshell.xml=/home/zzl/searchEngine/v1/conf/peopledaily/coolshell.xml
+cpc.xml=/home/zzl/searchEngine/v1/conf/peopledaily/cpc.xml
+culture.xml=/home/zzl/searchEngine/v1/conf/peopledaily/culture.xml
+dataparse.xml=/home/zzl/searchEngine/v1/conf/peopledaily/dataparse.xml
+ent.xml=/home/zzl/searchEngine/v1/conf/peopledaily/ent.xml
+env.xml=/home/zzl/searchEngine/v1/conf/peopledaily/env.xml
+finance.xml=/home/zzl/searchEngine/v1/conf/peopledaily/finance.xml
+game.xml=/home/zzl/searchEngine/v1/conf/peopledaily/game.xml
+gongyi.xml=/home/zzl/searchEngine/v1/conf/peopledaily/gongyi.xml
+haixia.xml=/home/zzl/searchEngine/v1/conf/peopledaily/haixia.xml
+health.xml=/home/zzl/searchEngine/v1/conf/peopledaily/health.xml
+history.xml=/home/zzl/searchEngine/v1/conf/peopledaily/history.xml
+hm.xml=/home/zzl/searchEngine/v1/conf/peopledaily/hm.xml
+homea.xml=/home/zzl/searchEngine/v1/conf/peopledaily/homea.xml
+hongmu.xml=/home/zzl/searchEngine/v1/conf/peopledaily/hongmu.xml
+house.xml=/home/zzl/searchEngine/v1/conf/peopledaily/house.xml
+ip.xml=/home/zzl/searchEngine/v1/conf/peopledaily/ip.xml
+it.xml=/home/zzl/searchEngine/v1/conf/peopledaily/it.xml
+latest.xml=/home/zzl/searchEngine/v1/conf/peopledaily/latest.xml
+legal.xml=/home/zzl/searchEngine/v1/conf/peopledaily/legal.xml
+liuyan.xml=/home/zzl/searchEngine/v1/conf/peopledaily/liuyan.xml
+media.xml=/home/zzl/searchEngine/v1/conf/peopledaily/media.xml
+opinion.xml=/home/zzl/searchEngine/v1/conf/peopledaily/opinion.xml
+politics.xml=/home/zzl/searchEngine/v1/conf/peopledaily/politics.xml
+scitech.xml=/home/zzl/searchEngine/v1/conf/peopledaily/scitech.xml
+sh.xml=/home/zzl/searchEngine/v1/conf/peopledaily/sh.xml
+shipin.xml=/home/zzl/searchEngine/v1/conf/peopledaily/shipin.xml
+society.xml=/home/zzl/searchEngine/v1/conf/peopledaily/society.xml
+sports.xml=/home/zzl/searchEngine/v1/conf/peopledaily/sports.xml
+tc.xml=/home/zzl/searchEngine/v1/conf/peopledaily/tc.xml
+theory.xml=/home/zzl/searchEngine/v1/conf/peopledaily/theory.xml
+world.xml=/home/zzl/searchEngine/v1/conf/peopledaily/world.xml
+yuqing.xml=/home/zzl/searchEngine/v1/conf/peopledaily/yuqing.xml
